modules/network_security/main.tf
resource "aws_security_group" "ssh" {
  name   = "${var.name_prefix}-ssh-sg" # Explicitly set the GroupName 
  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.allowed_ip_range
  }

  tags = {
    Name = "${var.name_prefix}-ssh-sg"
  }
}

resource "aws_security_group" "public_http" {
  name   = "${var.name_prefix}-public-http-sg" # Explicitly set the GroupName 
  vpc_id = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.allowed_ip_range
  }

  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Allow outbound HTTP traffic
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Allow outbound HTTPS traffic
  }

  tags = {
    Name = "${var.name_prefix}-public-http-sg"
  }
}

resource "aws_security_group" "private_http" {
  name   = "${var.name_prefix}-private-http-sg" # Explicitly set the GroupName 
  vpc_id = var.vpc_id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.public_http.id] # Reference the public_http SG
  }

  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Allow outbound HTTP traffic
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Allow outbound HTTPS traffic
  }

  tags = {
    Name = "${var.name_prefix}-private-http-sg"
  }
}
